--- a/package.json
+++ b/package.json
@@ -2,19 +2,30 @@
   "name": "react-project",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://adarshreddy65.github.io/Project-COVID19/",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "bootstrap": "^4.5.0",
+    "country-data": "0.0.31",
+    "gh-pages": "^3.0.0",
+    "jquery": "^3.5.1",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-google-charts": "^3.0.15",
+    "react-scripts": "3.4.1",
+    "reactstrap": "^8.4.1",
+    "typescript": "^3.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
