--- a/package.json
+++ b/package.json
@@ -2,14 +2,13 @@
   "name": "react-project",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://adarshreddy65.github.io/Project-COVID19/",
+  "homepage": "http://AdarshReddy65.github.io/Project-COVID19",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "bootstrap": "^4.5.0",
     "country-data": "0.0.31",
-    "gh-pages": "^3.0.0",
     "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.1",
@@ -20,12 +19,12 @@
     "typescript": "^3.9.5"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.0.0"
   }
 }
